tests/type-errors/expr_control_match_or_subptn_tyerror.arl
archetype expr_control_match_or_bad_return

variable res : nat = 0

entry exec() {
  var l : or<nat, int> = left<int>(2);
  res :=
  match l with
  | left v | right v -> 0
  end;
}
